# Gradewise

./: README.md  Tiltfile
.github/workflows/: build-and-test.yml
api-backend/: .gitignore  Cargo.toml  Dockerfile  go.mod  main.go
api-backend/handlers/: handlers.go
api-backend/src/: main.rs
api-backend/src/durable/service/: greeter.rs  mod.rs
api-backend/src/durable/types/: mod.rs
backend/: Cargo.toml  Dockerfile  Makefile  generate.env  generate.go  go.mod  go.sum
backend/api/: api.yaml  oapi-codegen.yaml
backend/cmd/server/: main.go
backend/cmd/worker/: main.go
backend/deployments/: Dockerfile  Dockerfile.dev
backend/internal/api/: impl.go
backend/internal/database/: postgres.go
backend/internal/temporal/: shared.go
backend/internal/temporal/activity/: greetings.go
backend/internal/temporal/workflow/: interaction.go
backend/scripts/: clean-dev-data.sh
backend/src/: lib.rs
backend/src/api/: counter.rs
backend/src/durable/service/: counter.rs  rules.rs
backend/src/durable/types/: greeter_types.rs
frontend/: .env.example  Dockerfile  package.json
frontend/src/routes/: +page.server.ts  +page.svelte  page.svelte.test.ts
k8s/: api-backend-deployment.yaml  durable-worker-deployment.yaml  frontend-deployment.yaml  restate-server-deployment.yaml  restate-server-register-job.yaml
k8s/backend/: postgres-deployment.yaml  temporal-server-deployment.yaml  temporal-worker-deployment.yaml
k8s/traefik/: role.yml  traefik.yml
k8s/traefik/ingress/: api-backend.yml  frontend.yml
