[package]
name = "gradewise-api-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
restate-sdk = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.0", features = ["full", "macros", "rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
