[package]
name = "gradewise-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
rand = "0.9.1"
restate-sdk = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.0", features = ["full", "macros", "rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[lib]
path = "src/lib.rs"

[[bin]]
name = "backend-api"
path = "src/bin/backend-api.rs"

[[bin]]
name = "durable-worker"
path = "src/bin/durable-worker.rs"
