[package]
name = "gradewise-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = "0.8.4"
paste = "1.0.15"
rand = "0.9.1"
reqwest = { version = "0.12.22", features = ["json"] }
restate-sdk = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.0", features = ["full", "macros", "rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[lib]
path = "src/lib.rs"

[[bin]]
name = "backend-api"
path = "src/bin/backend-api.rs"

[[bin]]
name = "durable-worker"
path = "src/bin/durable-worker.rs"
